2005-02-18  John W. Eaton  <jwe@octave.org>

	* Array.cc (Array<T>::permute): Allow permutation vector longer
	than number of dimenensions of permuted matrix.

	* Array.cc (Array<T>::permute): Use zero-based indexing for perm_vec.
	* Array-util.cc (calc_permutated_idx): Likewise.

2005-02-10  David Bateman  <dbateman@free.fr>

	* CNDArray.cc (ComplexNDarray::operator !): Change sense of test.
	* CMatrix.cc (ComplexMatrix::operator !): Likewise.

2005-02-09  John W. Eaton  <jwe@octave.org>

	* file-ops.cc (file_ops::canonicalize_file_name): New functions.
	* file-ops.h: Provide decls.

	* kpse.cc (kpse_tilde_expand): Simply return NAME if it is empty.

2005-02-08  John W. Eaton  <jwe@octave.org>

	* Array-util.cc (freeze): Improve error message.

2005-01-26  David Bateman <dbateman@free.fr>

	* Array.cc (Array<T>::insert): Handle generic case, not just
	special case for fast concatenation.

2005-01-18  John W. Eaton  <jwe@octave.org>

	* mx-inlines.cc (MX_ND_REDUCTION): Delete RET_ELT_TYPE arg.
	Change all uses.  Use VAL instead of RET_ELT_TYPE when resizing.

	* dNDArray.cc (NDArray::any): NaN does not count as a nonzero value.
	* CNDArray.cc (ComplexNDArray::any): Likewise.

2005-01-18  David Bateman <dbateman@free.fr>

	* Array.cc (Array<T>::insert (const Array<T>&, const Array<int>&)):
	Modify calculation of number elements to skip between copied blocks.

2005-01-18  John W. Eaton  <jwe@octave.org>

	* idx-vector.cc (IDX_VEC_REP::freeze): Call warning handler, not
	error handler, to warn about resizing.

2004-12-27  Martin Dalecki  <martin@dalecki.de>

	* Array.cc, ArrayN.cc, base-lu.cc, boolMatrix.cc, boolNDArray.cc,
	Bounds.cc, CColVector.cc, CDiagMatrix.cc, chMatrix.cc,
	chNDArray.cc, CMatrix.cc, CmplxAEPBAL.cc, CmplxCHOL.cc,
	CmplxDET.cc, CmplxHESS.cc, CmplxLU.cc, CmplxQR.cc, CmplxQRP.cc,
	CmplxSCHUR.cc, CmplxSVD.cc, CNDArray.cc, CollocWt.cc,
	CRowVector.cc, DASPK.cc, DASRT.cc, DASSL.cc, dbleAEPBAL.cc,