@@ -23,9 +23,9 @@ Software Foundation, 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #if !defined (octave_version_h)
 #define octave_version_h 1
 
-#define OCTAVE_VERSION "2.1.64"
+#define OCTAVE_VERSION "2.1.64-cvs"
 
-#define OCTAVE_API_VERSION "api-v12"
+#define OCTAVE_API_VERSION "api-v12-cvs"
 
 #define OCTAVE_COPYRIGHT \
   "Copyright (C) 2004 John W. Eaton."
